--- a/Progetto.ipynb
+++ b/Progetto.ipynb
@@ -475,7 +475,7 @@
     }
    ],
    "source": [
-    "#assegnamo X e Y per la regressione, al primo assegnamo il numero di suicidi per anno, al secondo gli anni\n",
+    "#assegniamo X e Y per la regressione, al primo assegniamo il numero di suicidi per anno, al secondo gli anni\n",
     "X = df.groupby('year').suicides_no.sum().to_numpy().reshape(-1,1)\n",
     "Y = df['year'].unique()\n",
     "\n",
@@ -483,11 +483,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c99d631",
    "metadata": {},
    "source": [
-    "<font size='4'>**Visto che i dati del 2016 sono incompleti abbiamo deciso di escluderlo** </font>"
+    "<font size='4'>**Escludiamo i dati relativi all'anno 2016, essendo incompleti** </font>"
    ]
   },
   {
